infra/derive/tests/ui/mhub_error_tuple_variant.rs
use mhub_derive::mhub_error;

#[mhub_error]
pub enum DemoError {
    #[error("IO error: {0}")]
    Io(std::io::Error),
}

fn main() {}
